--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -30,6 +30,23 @@
         </div>
 
 
+        <div style=" margin-top: 80px;">
+            <h2 class="govuk-heading-m">Duel running - Case list and work allocation</h2>
+
+            <p style="margin-bottom:10px; margin-top: 25px;">Staff</p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/caselist?usertype=staff&selectedtab=caselist&">Caselist</a></p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/available-tasks-sscs-testing?usertype=staff&selectedtab=mywork&">My work (work Allocation)</a></p>
+            <p><a  target="_blank"  href="/searchcases/transition/search?usertype=staff&selectedtab=search&">Search input</a></p>
+
+            <p style="margin-bottom:10px; margin-top: 25px;">Judiciary</p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/caselist?usertype=judiciary&selectedtab=caselist&">Caselist</a></p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/available-tasks-sscs-testing?usertype=judiciary&selectedtab=mywork&">My work (work Allocation) </a></p>
+            <p style="margin-bottom:10px;"><a  target="_blank"  href="/searchcases/transition/search?usertype=judiciary&selectedtab=search&">Search input</a></p>
+
+        </div>
+
+
+
 
 
         <h2 class="govuk-heading-m" style="display: flex; margin-top: 80px;">User testing - April 2021</h2>
