--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -318,7 +318,7 @@ GOV.UK Prototype Kit
 
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-noj?usertype=staff&">Roles and access - Allocate role</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajn?usertype=staff&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err-s?usertype=staff&">Roles and access - Allocate role - error</a><br>NEW - additional error page</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err-s?usertype=staff&">Roles and access - Allocate role - generic error</a><br>NEW - additional generic error page when no selction has been made</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhn?usertype=staff&">Roles and access - Allocate a judicial role - choose</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhan?usertype=staff&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndur?usertype=staff&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
