--- a/app/views/workallocation/pages/assign-task-b.html
+++ b/app/views/workallocation/pages/assign-task-b.html
@@ -32,7 +32,7 @@ My work
               <th scope="col" class="govuk-table__header" aria-sort="none">Case category</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Location</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Task</th>
-              <th scope="col" class="govuk-table__header" aria-sort="none">Date</th>
+              <th scope="col" class="govuk-table__header" aria-sort="none">Task created</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Person</th>
               <th scope="col" class="govuk-table__header" aria-sort="none"></th>
             </tr>
@@ -44,10 +44,7 @@ My work
               <td data-label="Reference">HR</td>
               <td data-label="Status">Taylor House</td>
               <td data-label="Date">Review respondent evidence</td>
-                <td data-label="Amount">{{govukTag({
-                text: now | date( 'subtract', 0, 'days' ) | date,
-                classes: "govuk-tag--yellow"
-              })}} </td>
+                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
         <td data-label="Status">Judge Birch</td>
           <td data-label="Status"><a href="assign-task">Change</a></td>
             </tr>
